--- a/package.json
+++ b/package.json
@@ -1,19 +1,21 @@
 {
     "private": true,
-    "type": "module",
+    "main": "electron/main/index.js",
     "scripts": {
-        "build": "vite build",
-        "dev": "vite"
+      "dev": "vite",
+      "start": "php artisan serve & wait-on http://127.0.0.1:8000 && electron .",
+      "native:serve": "nativephp serve"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.5.2",
-        "alpinejs": "^3.4.2",
-        "autoprefixer": "^10.4.2",
-        "axios": "^1.7.4",
-        "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.2.0",
-        "postcss": "^8.4.31",
-        "tailwindcss": "^3.1.0",
-        "vite": "^6.0.11"
+      "axios": "^1.7.4",
+      "electron": "^25.9.8",
+      "vite": "^6.3.5",
+      "wait-on": "^8.0.3"
+    },
+    "dependencies": {
+      "bootstrap": "^4.6.2",
+      "jquery": "^3.7.1",
+      "popper.js": "^1.16.1",
+      "toastr": "^2.1.4"
     }
-}
+  }
